<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EFEF"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/settingsToolBsr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <TextView
                    android:id="@+id/categoriesTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:paddingStart="10dp"
                    android:text="@string/settings"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <androidx.cardview.widget.CardView
                android:id="@+id/langCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/langTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="15dp"
                        android:text="@string/languages"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/arrowBtn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="@+id/langTxt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/arrow_down" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/expandable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/langTxt">

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <RadioButton
                                android:id="@+id/englishRadBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/english" />

                            <RadioButton
                                android:id="@+id/arabicRadBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/arabic" />
                        </RadioGroup>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/socialCardView"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/socialTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="15dp"
                        android:text="@string/social"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/socialArrowBtn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="@+id/socialTxt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/arrow_down" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/socialExpandable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/socialTxt">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/facebookBtn"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/facebook" />

                            <ImageButton
                                android:id="@+id/instagramBtn"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/instagram" />

                            <ImageButton
                                android:id="@+id/whatsappBtn"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/whatsapp" />

                            <ImageButton
                                android:id="@+id/twitterBtn"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/twitter" />

                            <ImageButton
                                android:id="@+id/linkedinBtn"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/linkedin" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.etebarian.meowbottomnavigation.MeowBottomNavigation
            android:id="@+id/meowBtmNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:mbn_backgroundBottomColor="@color/colorPrimaryDark"
            app:mbn_circleColor="@color/white"
            app:mbn_countBackgroundColor="@color/colorPrimary"
            app:mbn_countTextColor="@color/white"
            app:mbn_defaultIconColor="@color/white"
            app:mbn_selectedIconColor="@color/colorPrimary"
            app:mbn_shadowColor="@color/black">

        </com.etebarian.meowbottomnavigation.MeowBottomNavigation>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>